app/globals.css
@import "tailwindcss";

@theme {
  --color-foxy-bg: #d3d3d3;
  --color-foxy-surface: #302F2F;
  --color-foxy-text: #2C3E35;
  --color-foxy-accent: #c2a83e;
  --color-foxy-accent-hover: #e67f0d;

  --font-playfair: var(--font-playfair);
  --font-montserrat: var(--font-montserrat);
  --font-lato: var(--font-lato);
}

/* Примусово скидаємо системні кольори Next.js */
:root {
  background-color: var(--color-foxy-bg);
  color: var(--color-foxy-text);
}

body {
  background-color: var(--color-foxy-bg);
  color: var(--color-foxy-text);
}

@keyframes shimmer {
  0% { transform: translateX(-150%) skewX(-12deg); }
  50% { transform: translateX(150%) skewX(-12deg); }
  100% { transform: translateX(150%) skewX(-12deg); }
}

.hide-scrollbar::-webkit-scrollbar {
  display: none;
}
.hide-scrollbar {
  -ms-overflow-style: none;
  scrollbar-width: none;
}

